add profile for JDK 25+ as well
Note: tested on the branch "feature/FELIX-6759-Java-25-LTS" with
      openjdk version "25.0.1"